--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "cal.js",
   "scripts": {
-    "test": "mocha --harmony_destructuring tests"
+    "test": "mocha --harmony_destructuring tests",
+    "cover": "node --harmony_destructuring ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha tests",
+    "coveralls": "npm run cover && cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,7 @@
   "homepage": "https://github.com/threepears/node-cal#readme",
   "devDependencies": {
     "chai": "^3.4.1",
+    "istanbul": "^0.4.2",
     "mocha": "^2.3.4"
   },
   "dependencies": {
